# mtp-ii

./: .gitignore  README.md  dory.tex  single_point_results.json
Bulletproofs/: Cargo.toml  README.md  bulletproofs_results.json  bulletproofs_results_Pip.json  plot.py
Bulletproofs/src/: bench_bulletproofs.rs  bulletproofs.rs  main.rs
Final Graphs/: multilinear_kzg_results.json  plot.py
KZG/: Cargo.toml  README.md  plot.py  single_point_results.json  single_point_results_Pip.json
KZG/src/: bench_single.rs  bench_single_main.rs  kzg.rs  main.rs  utils.rs
MTP2/: abs.aux  abs.tex  ack.aux  ack.tex  approval.tex  cite.bib  dec.aux  dec.tex  iitbreport.cls  mainrep.aux  mainrep.bbl  mainrep.blg  mainrep.out  mainrep.tex  mainrep.toc  mylit.bib
MTP2/chapter2/: chapter2.aux  chapter2.tex
MTP2/chapter3/: chapter3.aux  chapter3.tex
MTP2/chapter4/: chapter4.aux  chapter4.tex
MTP2/chapter5/: chapter5.aux  chapter5.tex
MTP2/chapter6/: chapter6.aux  chapter6.tex
MTP2/chapter7/: chapter7.aux  chapter7.tex
MTP2/intro/: introduction.aux  introduction.tex
MTP2/lit/: literature.tex
Multilinear KZG/: Cargo.toml  README.md  plot.py
Multilinear KZG/src/: bench_main.rs  bench_multi_kzg.rs  main.rs  mle.rs  multilinear_kzg.rs
dory-main/: .gitignore  Cargo.toml  DORY_ANALYSIS.md  dory_results.json  plot.py
dory-main/derive/src/: lib.rs
dory-main/hooks/: pre-commit
dory-main/scripts/: install-hooks.sh
dory-main/src/: setup.rs
dory-main/src/backends/: bls12_377.rs  bls12_381.rs  mod.rs
dory-main/src/primitives/: serialization.rs
(+7 files in other folders)
