[package]
name = "kzg-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-bls12-377 = "0.4"
rand = "0.8.5"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "bench_single"
path = "src/bench_single_main.rs"

