[package]
name = "multilinear-kzg"
version = "0.1.0"
edition = "2021"
default-run = "multilinear-kzg"

[[bin]]
name = "multilinear-kzg"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench_main.rs"

[dependencies]
ark-ff        = "0.4"
ark-ec        = "0.4"
ark-bls12-381 = "0.4"
ark-bn254     = "0.4"
ark-bls12-377 = "0.4"
ark-std       = "0.4"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
